--- a/templates/page.html
+++ b/templates/page.html
@@ -6,6 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-    {% draw_menu request 'main_menu' %}
+{#    {% draw_menu request 'main_menu' %}#}
+    {% draw_menu request 'second_menu' %}
 </body>
 </html>
